--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pinia": "^2.1.7",
     "swiper": "^11.1.14",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "yandex-metrika-vue3": "^1.3.1"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
