--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.7",
+    "gsap": "^3.12.5",
     "pinia": "^2.1.7",
     "swiper": "^11.1.14",
     "vue": "^3.4.29",
