--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/gsap": "^3.0.0",
     "@types/node": "^20.14.5",
     "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
