--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,9 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "typeRoots": ["./node_modules/@types", "./src"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
