--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: npm run build
+        run: vite build
 
       - name: Install lftp
         run: sudo apt-get update && sudo apt-get install -y lftp
