--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "swiper": "^11.1.14",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
-    "yandex-metrika-vue3": "^1.3.1"
+    "yandex-metrika-vue3": "^1.3.1",
+    "vue-3-mask": "^0.0.1-alpha"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
