--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "axios": "^1.7.7",
     "gsap": "^3.12.5",
     "pinia": "^2.1.7",
-    "swiper": "^11.1.14",
+    "swiper": "^11.1.15",
     "vue": "^3.4.29",
+    "vue-3-mask": "^0.0.1-alpha",
     "vue-router": "^4.3.3",
-    "yandex-metrika-vue3": "^1.3.1",
-    "vue-3-mask": "^0.0.1-alpha"
+    "yandex-metrika-vue3": "^1.3.1"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
