--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,4 @@
-# name: Deploy Vue to WordPress
-
-# on:
-#   push:
-#     branches:
-#       - master # Укажите ветку, на которую нужно настраивать деплой, например, main или master.
-
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3 # Используем последнюю версию checkout action
-
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: "20" # Укажите нужную версию Node.js
-
-#       - name: Install dependencies
-#         run: npm install
-
-#       - name: Build project
-#         run: npm run generate
-
-#       - name: Install lftp
-#         run: sudo apt-get update && sudo apt-get install -y lftp
-
-#       - name: Deploy
-#         env:
-#           FTP_SERVER: ${{ secrets.FTP_SERVER }}
-#           FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-#           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
-#         run: |
-#           lftp -c "
-#           set ssl:verify-certificate no;
-#           open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER;
-#           # mirror -R ./.output/public/ /www/autocarmsk.ru/;
-#           quit"
-
-name: Deploy Vue to WordPress
+name: Deploy Vue
 
 on:
   push:
@@ -63,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: npx nuxi generate # Если используется другая команда для сборки, замените её
+        run: npm run build # Если используется другая команда для сборки, замените её
 
       - name: Install lftp
         run: sudo apt-get update && sudo apt-get install -y lftp
