--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
     "@iconify/vue": "^4.1.2",
+    "@unhead/vue": "^1.11.14",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.7",
@@ -24,6 +25,7 @@
     "swiper": "^11.1.15",
     "vue": "^3.4.29",
     "vue-3-mask": "^0.0.1-alpha",
+    "vue-meta": "^3.0.0-alpha.9",
     "vue-router": "^4.3.3",
     "vue-toastification": "^2.0.0-rc.5",
     "yandex-metrika-vue3": "^1.3.1"
