--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_BASE_URL=https://autocarmsk.ru/
+VITE_BASE_URL=https://autocarmsk.ru/wp-content/uploads/json
 VITE_API_CRM_URL=http://crm.renault-s.ru/expo/api/deal/add
