--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_BASE_URL=https://autocarmsk.ru/wp-content/uploads/json
 VITE_API_CRM_URL=http://crm.renault-s.ru/expo/api/deal/add
+VITE_BASE_URL_ASSET=https://autocarmsk.ru/
